--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 
   "main": "dist/waterfall_virtual.js",
   "scripts": {
+    "pkg":"npx webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
